--- a/index.html
+++ b/index.html
@@ -13,9 +13,22 @@
 
     <div class="scroll-container">
 
+      <div class="scroll-block section-0">
+        <div class="album">
+          <div class="image-container section-0 active">
+            <img src="img/0-0-100perc.gif" alt="">
+          </div>
+          <div class="header section-0">
+            <h1>Welcome to application map
+              <br>a design tool for QA
+            </h1>
+          </div>
+        </div>
+      </div>
+
       <div class="scroll-block section-1">
 
-        <div class="header">
+        <div class="header section-1">
           <h1>Application Map</h1>
         </div>
         <div class="album">
@@ -69,7 +82,7 @@
 
       <div class="scroll-block section-2">
 
-        <div class="header">
+        <div class="header section-3">
           <h1>Automation use cases</h1>
         </div>
         <div class="album">
@@ -92,7 +105,7 @@
           <div class="image-container section-2">
             <img src="img/placeImage.png" alt="">
             <div class="info">
-              <h2>Functional user flow</h2>
+              <h2>Functional user flows</h2>
               <p>● Combine user flows with browser actions and assertion</p>
               <p>● Quickly identify repeating patterns from overlapping layers</p>
             </div>
