Landing page and section-1 update
- added new landing page with welcome animation
- added images/gifs for section-1

--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
       <div class="scroll-block section-0">
         <div class="album">
           <div class="image-container section-0 active">
-            <img src="img/0-0-100perc.gif" alt="">
+            <img src="img/0-0-100p.gif" alt="">
           </div>
           <div class="header section-0">
-            <h1>Welcome to application map
-              <br>a design tool for QA
+            <h1>APPLICATION MAP
+            </h1>
+            <h1>a design tool for QA
             </h1>
           </div>
         </div>
@@ -29,11 +30,11 @@
       <div class="scroll-block section-1">
 
         <div class="header section-1">
-          <h1>Application Map</h1>
+          <h1>Design System</h1>
         </div>
         <div class="album">
           <div class="image-container section-1 active">
-            <img src="img/placeImage.png" alt="">
+            <img src="img/1-1-12p.png" alt="">
             <div class="info">
               <h2>QA Companion Tool</h2>
               <p>● Functional map showing page structure and UI actions in visual hierarchies</p>
@@ -42,7 +43,7 @@
             </div>
           </div>
           <div class="image-container section-1">
-            <img src="img/placeImage.png" alt="">
+            <img src="img/1-2-100p.png" alt="">
             <div class="info">
               <h2>QA & UX</h2>
               <p>● Created in XD/Figma</p>
@@ -50,7 +51,7 @@
             </div>
           </div>
           <div class="image-container section-1">
-            <img src="img/placeImage.png" alt="">
+            <img src="img/1-3-100p.gif" alt="">
             <div class="info">
               <h2>Modable design</h2>
               <p>● Components and stacks for every item</p>
@@ -58,7 +59,7 @@
             </div>
           </div>
           <div class="image-container section-1">
-            <img src="img/placeGif.gif" alt="">
+            <img src="img/1-4-100p.gif" alt="">
             <div class="info">
               <h2>Visual QA collaboration</h2>
               <p>● Gain better understanding of user flows and how they link to functionality</p>
