section 2 content slides 1-2-3
- images and gifs for section 2 slides 1-2-3
- decoration for header

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </div>
         <div class="album">
           <div class="image-container section-2 active">
-            <img src="img/placeGif.gif" alt="">
+            <img src="img/2-1-100p.gif" alt="">
             <div class="info">
               <h2>Risk assessment</h2>
               <p>● Translate tables and data into visual representations</p>
@@ -96,7 +96,7 @@
             </div>
           </div>
           <div class="image-container section-2">
-            <img src="img/placeImage.png" alt="">
+            <img src="img/2-2-100p.gif" alt="">
             <div class="info">
               <h2>Automation Heatmaps</h2>
               <p>● Quickly visualize priority and effort for the whole app</p>
@@ -104,11 +104,11 @@
             </div>
           </div>
           <div class="image-container section-2">
-            <img src="img/placeImage.png" alt="">
+            <img src="img/2-3-20p.gif" alt="">
             <div class="info">
-              <h2>Functional user flows</h2>
-              <p>● Combine user flows with browser actions and assertion</p>
-              <p>● Quickly identify repeating patterns from overlapping layers</p>
+              <h2>Test plans</h2>
+              <p>● Plan scope of automation and manual test plans</p>
+              <p>● Present and compare different packs like smoke and regression</p>
             </div>
           </div>
           <div class="image-container section-2">
@@ -122,9 +122,9 @@
           <div class="image-container section-2">
             <img src="img/placeImage.png" alt="">
             <div class="info">
-              <h2>Test plans</h2>
-              <p>● Plan scope of automation and manual test plans</p>
-              <p>● Present and compare plans like smoke and regression</p>
+              <h2>Functional user flows</h2>
+              <p>● Combine user flows with browser actions and assertion</p>
+              <p>● Quickly identify repeating patterns from overlapping layers</p>
             </div>
           </div>
           <div class="navigation section-2">
