--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
           </div>
           <div class="image-container section-1">
             <img src="img/1-3-100p.gif" alt="">
+            <div class="gif">
+              <p>GIF</p>
+            </div>
             <div class="info">
               <h2>Modable design</h2>
               <p>● Components and stacks for every item</p>
@@ -60,6 +63,9 @@
           </div>
           <div class="image-container section-1">
             <img src="img/1-4-100p.gif" alt="">
+            <div class="gif">
+              <p>GIF</p>
+            </div>
             <div class="info">
               <h2>Visual QA collaboration</h2>
               <p>● Gain better understanding of user flows and how they link to functionality</p>
@@ -89,6 +95,9 @@
         <div class="album">
           <div class="image-container section-2 active">
             <img src="img/2-1-100p.gif" alt="">
+            <div class="gif">
+              <p>GIF</p>
+            </div>
             <div class="info">
               <h2>Risk assessment</h2>
               <p>● Translate tables and data into visual representations</p>
@@ -97,6 +106,9 @@
           </div>
           <div class="image-container section-2">
             <img src="img/2-2-100p.gif" alt="">
+            <div class="gif">
+              <p>GIF</p>
+            </div>
             <div class="info">
               <h2>Automation Heatmaps</h2>
               <p>● Quickly visualize priority and effort for the whole app</p>
@@ -105,6 +117,9 @@
           </div>
           <div class="image-container section-2">
             <img src="img/2-3-20p.gif" alt="">
+            <div class="gif">
+              <p>GIF</p>
+            </div>
             <div class="info">
               <h2>Test plans</h2>
               <p>● Plan scope of automation and manual test plans</p>
@@ -112,19 +127,19 @@
             </div>
           </div>
           <div class="image-container section-2">
-            <img src="img/placeImage.png" alt="">
+            <img src="img/2-4-70p.png" alt="">
             <div class="info">
-              <h2>Functional summary</h2>
-              <p>● Quickly accessible statistics for sections and actions of any scope</p>
-              <p>● Identify relevant abstraction oportunities</p>
+              <h2>Scenario flows</h2>
+              <p>● Combine automation scenarios with task flows</p>
+              <p>● Quickly identify repeating patterns from overlapping layers</p>
             </div>
           </div>
           <div class="image-container section-2">
-            <img src="img/placeImage.png" alt="">
+            <img src="img/2-5-60p.png" alt="">
             <div class="info">
-              <h2>Functional user flows</h2>
-              <p>● Combine user flows with browser actions and assertion</p>
-              <p>● Quickly identify repeating patterns from overlapping layers</p>
+              <h2>Functional summary</h2>
+              <p>● Quickly accessible statistics for sections and actions</p>
+              <p>● Identify relevant abstraction oportunities for automation</p>
             </div>
           </div>
           <div class="navigation section-2">
