--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <div class="image-container section-1 active">
             <img src="img/1-1-12p.png" alt="">
             <div class="info">
-              <h2>QA Companion Tool</h2>
+              <h2>QA companion tool</h2>
               <p>● Functional map showing page structure and UI actions in visual hierarchies</p>
               <p>● Bird's eye view over whole application at a glance using zoomable interfaces</p>
               <p>● Onboarding document for everybody</p>
@@ -110,7 +110,7 @@
               <p>GIF</p>
             </div>
             <div class="info">
-              <h2>Automation Heatmaps</h2>
+              <h2>Automation heatmaps</h2>
               <p>● Quickly visualize priority and effort for the whole app</p>
               <p>● Communicate application wide automation plan and progress to whole team</p>
             </div>
